--- a/index.html
+++ b/index.html
@@ -51,19 +51,26 @@
 
   <hr>
 
-  <h2 style="color:Pink">Preferences</h2>
+  <h2 style="color:Grey">Preferences</h2>
 
   <hr>
 
-  <t border="">
+  <table border="4">
     <tr>
-    <td>Favorite Color</td>
-    <td>Green</td>
+      <td>Favorite Color</td>
+      <td style="color:Green">Green</td>
     </tr>
     <tr>
+      <td>Favorite Show</td>
+      <td>Avatar: The Last Airbender</td>
+    </tr>
+    <tr>
+      <td>Favorite Book Series</td>
+      <td>Percy Jackson and the Olympians</td>
 
     </tr>
-  </t>
+
+  </table>
 </body>
 
 </html>
