--- a/index.html
+++ b/index.html
@@ -1,76 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <form action="mailto:adityalagu1@gmail.com" method="post" enctype="text/plain">
+      <label>Your Name:</label>
+      <input type="text" name="yourName" value=""></input> <br>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Aditya Lagu's Personal Site</title>
-</head>
+      <label>Your Email:</label>
+      <input type="email" name="yourEmail"> <br>
+      <textarea name="yourMessage" rows="10" cols="30"></textarea>
 
-<body>
-  <h1 align="center" style="color:Red;">ADITYA LAGU</h1>
 
-  <p><i> I am a 14 year-old from Suwanee, Georgia <br>
-      I attend <a href="https://www.forsyth.k12.ga.us/cms/lib3/GA01000373/Centricity/Domain/2285/Lambert.jpg">Lambert High School</a></i></p>
-  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSLPk-qwo_epwPJ2Yq_t6GUPW3FjE5pnFhZ10frdhLDR8FVHhuQ4vfjB7EHyOPF_4SAbL4&usqp=CAU">
+      <input type="submit">
 
-  <hr>
+    </form>
 
-  <h2 style="color:Orange;">Hobbies</h2>
-  <hr>
-
-  <h3 style="color:Blue">Piano:</h3>
-  <p> - I have been playing since I was 5 <br>
-    - Went to the California State Convention for Musicians in the summer of 2021 <br>
-    - I have a youtube channel!-----> <a href="https://www.youtube.com/channel/UC7n5mVjmgzDFfZl0VVUm2Kw">Click here to see!</a></p> <br>
-  <hr>
-
-  <h3 style="color:Green">Taekwondo:</h3>
-  <p> - I have been doing taekwondo since I was 8 <br>
-    - I went to Korea in 2018 to participate in a training camp and 2 international tournaments <br>
-    - I have a second degree black belt</p> <br>
-
-  <hr>
-
-  <h2 style="color:Purple">Programming Experience</h2>
-
-  <hr>
-
-  <p>- I started learning python during the COVID-19 Pandemic and love it! <br>
-    - I have made a couple games such as snake, pong, and crossy road <br>
-    - I have made a couple of mathematical and scientific programs which include <br>
-    a binary star tracker, Polynomial operations class, Imaginary Numbers Class, a <br>
-    password manager app, a flash-card app that teaches French, a quote generator, and <br>
-    many more<br>
-    - I have also dabbled in data analysis using pandas and csv files<br>
-    - I have also programmed a US States Trivia Game<br>
-    - I am most proud of one program: A weather alert app. This app makes an API call to a<br>
-    weather service provider and returns a JSON while where the weather data code is extracted. <br>
-    Using the Twilio SMS API and PythonAnywhere task runner, I send messages every morning at 6 <br>
-    to me and my parents that tells us what the weather for the day will be.
-  </p>
-
-  <hr>
-
-  <h2 style="color:Grey">Preferences</h2>
-
-  <hr>
-
-  <table border="4">
-    <tr>
-      <td>Favorite Color</td>
-      <td style="color:Green">Green</td>
-    </tr>
-    <tr>
-      <td>Favorite Show</td>
-      <td>Avatar: The Last Airbender</td>
-    </tr>
-    <tr>
-      <td>Favorite Book Series</td>
-      <td>Percy Jackson and the Olympians</td>
-
-    </tr>
-
-  </table>
-</body>
-
+    <a href="index.html">Return to Home</a>
+  </body>
 </html>
+
