--- a/index.html
+++ b/index.html
@@ -1,24 +1,103 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <form action="mailto:adityalagu1@gmail.com" method="post" enctype="text/plain">
-      <label>Your Name:</label>
-      <input type="text" name="yourName" value=""></input> <br>
 
-      <label>Your Email:</label>
-      <input type="email" name="yourEmail"> <br>
-      <textarea name="yourMessage" rows="10" cols="30"></textarea>
+<head>
+  <meta charset="utf-8">
+  <title>Aditya's Personal Site</title>
+</head>
 
 
-      <input type="submit">
+<body>
+  <table cellspacing="20">
+    <tr>
+      <td><img src="Aditya-Profile-Picture.jpeg" alt="Aditya Profile Picutre"></img></td>
+      <td><h1><em>Aditya Lagu</em></h1>
+      <p>Student at <a href="https://www.forsyth.k12.ga.us/lhs">Lambert High School.</a></p></td>
+    </tr>
+  </table>
 
-    </form>
 
-    <a href="index.html">Return to Home</a>
-  </body>
+  <hr>
+
+  <h3>Passions</h3>
+
+  <ul>
+    <li>Learning</li>
+    <li>Reading</li>
+    <li><a href="https://www.youtube.com/channel/UC7n5mVjmgzDFfZl0VVUm2Kw/featured">Piano</a></li>
+    <li>Acting</li>
+  </ul>
+
+<hr>
+  <h3>Work Experience and Education</h3>
+  <table>
+    <thead>
+      <tr>
+        <th>Years</th>
+        <th>Work</th>
+      </tr>
+    <thead>
+
+    <tbody>
+      <tr>
+        <td>2018-2021</td>
+        <td>Instructor at Sky Martial Arts</td>
+      </tr>
+      <tr>
+        <td></td>
+      </tr>
+    </tbody>
+
+  </table>
+<hr>
+  <h3>Skills</h3>
+
+  <table border="20" cellspacing="10">
+    <tr>
+      <td><table>
+        <tr>
+          <td>Piano</td>
+          <td>⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>Python Development</td>
+          <td>⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>Teaching</td>
+          <td>⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>iOS Development (Swift)</td>
+          <td>⭐⭐</td>
+        </tr>
+
+      </table></td>
+      <td><table>
+        <tr>
+          <td>Piano</td>
+          <td>⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>Python Development</td>
+          <td>⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>Teaching</td>
+          <td>⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td>iOS Development (Swift)</td>
+          <td>⭐⭐</td>
+        </tr>
+
+      </table></td>
+    </tr>
+  </table>
+
+<p><a href="contact.html">Contact</a></p>
+
+
+</body>
+
 </html>
-
